status bar and animation added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             </div>
             <div class="nav_pill"></div>
             <div class="iphone_border">
+                <div class="status_bar">
+                    <img draggable="false" src="./src/assets/icons/IOS16_Status_Bar.svg" alt="">
+                </div>
                 <div class="doc">
                     <div class="app"></div>
                     <div class="app"></div>
