--- a/index.html
+++ b/index.html
@@ -29,6 +29,22 @@
                     <div class="app"></div>
                     <div class="app"></div>
                 </div>
+
+                <div class="app_section">
+                    <a href="#">
+                        <div class="app_container">
+                            <div class="app"></div>
+                            <span>Hardware<br> Training</span>
+                        </div>
+                    </a>
+
+                    <a href="#">
+                        <div class="app_container">
+                            <div class="app"></div>
+                            <span>Software <br>Training</span>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
