--- a/index.html
+++ b/index.html
@@ -31,22 +31,117 @@
                 </div>
 
                 <div class="app_section">
-                    <a href="#">
-                        <div class="app_container">
+
+                        <div class="app_container ht_icon">
                             <div class="app"></div>
                             <span>Hardware<br> Training</span>
                         </div>
-                    </a>
 
-                    <a href="#">
-                        <div class="app_container">
+
+
+                        <div class="app_container st_icon">
                             <div class="app"></div>
                             <span>Software <br>Training</span>
                         </div>
-                    </a>
+
+                </div>
+
+                <div class="open_app_section">
+                    <div class="open_status">
+                        <img draggable="false" src="./src/assets/icons/IOS16_Status_Bar_black.svg" alt="">
+                    </div>
+
+
+                    <div class="software_training">
+                        <div class="st_icon">
+                            <img src="./src/assets/icons/software_trainging_.jpg" alt="course_icon">
+                        </div>
+
+                        <div class="course_content">
+                            <div>
+                                <ul>
+                                    <li>Software Introduction</li>
+                                    <li>Flashing - 1</li>
+                                    <li>Flashing - 2</li>
+                                    <li>Flashing - 3</li>
+                                    <li>FRP Lock</li>
+                                </ul>
+                                <ul>
+                                    <li>MI Lock</li>
+                                    <li>UMT Dongle - 1</li>
+                                    <li>UMT Dongle - 2</li>
+                                    <li>UMT Dongle - 3</li>
+                                    <li>How to Analyze Software and Hardware Problems</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="hardware_training">
+                        <div class="st_icon">
+                            <img src="./src/assets/icons/software_trainging_.jpg" alt="course_icon">
+                        </div>
+
+                        <div class="course_content">
+                            <div>
+                                <ul>
+                                    <li>Introduction to Mobile Phone</li>
+                                    <li>Multimeter - 1</li>
+                                    <li>Multimeter - 2</li>
+                                    <li>Phone Dissambling and Assembling -1</li>
+                                    <li>Phone Dissambling and Assembling -2</li>
+                                    <li>Electronic Parts - 1</li>
+                                    <li>Electronics Parts - 2</li>
+                                    <li>Series and Parallel Connection</li>
+                                    <li>Blower Training - 1</li>
+                                    <li>Blower Training - 2</li>
+                                    <li>Blower Training - 3</li>
+                                    <li>Blower Training - 4</li>
+                                    <li>Soldering Iron Training - 1</li>
+                                    <li>Soldering Iron Training - 2</li>
+                                    <li>Soldering Iron Training - 3</li>
+                                    <li>Soldering Iron Training - 4</li>
+                                    <li>Block Diagram - 1</li>
+                                    <li>Block Diagram - 2</li>
+                                    <li>Block Diagram - 3</li>
+                                    <li>IC Identification - 1</li>
+                                    <li>IC Idebtification - 2</li>
+                                    <li>Power Supply Training - 1</li>
+                                    <li>Powe Supply Training - 2</li>
+                                </ul>
+                                <ul>
+                                    <li>Primary and Secondary Line</li>
+                                    <li>Hot Testing and Cold Testing</li>
+                                    <li>Hardware Solution</li>
+                                    <li>On Off Section</li>
+                                    <li>SIM Section</li>
+                                    <li>SD Card Section</li>
+                                    <li>Display Section</li>
+                                    <li>Charging Section</li>
+                                    <li>Bluetooth / WiFi Section</li>
+                                    <li>GPS Section</li>
+                                    <li>Network Section</li>
+                                    <li>Camera Section</li>
+                                    <li>Sensor Section</li>
+                                    <li>Short / Leakage - 1</li>
+                                    <li>Short / Leakage - 2</li>
+                                    <li>Dead Phone Repair - 1</li>
+                                    <li>Dead Phone Repair - 2</li>
+                                    <li>Display Changing - 1</li>
+                                    <li>Display Changing - 2</li>
+                                    <li>Display Seperating Machine</li>
+                                    <li>Schematic Diagram - 1</li>
+                                    <li>Schematic Diagram - 2</li>
+                                    <li>Bitmap - 1</li>
+                                    <li>Bitmap - 2</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <script src="./src/javaScript/index.js"></script>
 </body>
 </html>
