--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                     <div class="software_training">
                         <div class="st_icon">
                             <img src="./src/assets/icons/software_trainging_.jpg" alt="course_icon">
+                            <p>
+                                Software Training
+                            </p>
                         </div>
 
                         <div class="course_content">
@@ -81,6 +84,9 @@
                     <div class="hardware_training">
                         <div class="st_icon">
                             <img src="./src/assets/icons/hardware_trainging.jpg" alt="course_icon">
+                            <p>
+                                Hardware Training
+                            </p>
                         </div>
 
                         <div class="course_content">
