doc : updated with hyperlinks

--- a/index.html
+++ b/index.html
@@ -26,10 +26,18 @@
                     <img draggable="false" src="./src/assets/icons/IOS16_Status_Bar.svg" alt="">
                 </div>
                 <div class="doc">
-                    <div class="app"></div>
-                    <div class="app"></div>
-                    <div class="app"></div>
-                    <div class="app"></div>
+                    <a href="tel:+919846233339">
+                        <div class="app"></div>
+                    </a>
+                    <a href="https://www.google.com/maps/place/I-Net+Infotech/@9.990167,76.284695,10z/data=!4m6!3m5!1s0x3b080d44822d4e99:0x1c6569c3de98a9d1!8m2!3d9.9901672!4d76.2846945!16s%2Fg%2F1tgbz5t0?hl=en-US&entry=ttu" target="_blank">
+                        <div class="app"></div>
+                    </a>
+                    <a href="https://wa.me/919846233339" target="_blank">
+                        <div class="app"></div>
+                    </a>
+                    <a href="https://www.facebook.com/inetinfotech4u/" target="_blank">
+                        <div class="app"></div>
+                    </a>
                 </div>
 
                 <div class="app_section">
