app icons : upadeted ( added new apps )

--- a/index.html
+++ b/index.html
@@ -54,6 +54,38 @@
                         <span>Software <br>Training</span>
                     </div>
 
+                    <div class="app_container multi_icon">
+                        <div class="app"></div>
+                        <span>Multimeter</span>
+                    </div>
+
+                    <div class="app_container bga_icon">
+                        <div class="app"></div>
+                        <span>BGA <br>Work Station</span>
+                    </div>
+
+                    <div class="app_container cro_icon">
+                        <div class="app"></div>
+                        <span>CRO</span>
+                    </div>
+
+
+                    <div class="app_container dc_icon">
+                        <div class="app"></div>
+                        <span>DC<br>Power Supply</span>
+                    </div>
+
+
+                    <div class="app_container ssold_icon">
+                        <div class="app"></div>
+                        <span>Soldering <br>Iron</span>
+                    </div>
+
+                    <div class="app_container st_icon">
+                        <div class="app"></div>
+                        <span>SMD<br>Rework Station</span>
+                    </div>
+
                 </div>
 
                 <div class="open_app_section">
