--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
                     </div>
 
 
-                    <div class="app_container ssold_icon">
+                    <div class="app_container sold_icon">
                         <div class="app"></div>
                         <span>Soldering <br>Iron</span>
                     </div>
 
-                    <div class="app_container st_icon">
+                    <div class="app_container rs_icon">
                         <div class="app"></div>
                         <span>SMD<br>Rework Station</span>
                     </div>
@@ -121,6 +121,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="hardware_training">
                         <div class="st_icon">
                             <img src="./src/assets/icons/hardware_trainging.jpg" alt="course_icon">
@@ -182,6 +183,108 @@
                                     <li>Bitmap - 1</li>
                                     <li>Bitmap - 2</li>
                                 </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="multimeter">
+                        <div class="st_icon">
+                            <img src="./src/assets/icons/Multimeter.jpg" alt="course_icon">
+                            <p>
+                                Multimeter
+                            </p>
+                        </div>
+
+                        <div class="course_content">
+                            <div>
+                                <p>
+                                    A Multimeter is a versatile electrical instrument used to measure multiple electrical properties, including voltage, resistance, and current. It is a handheld device that can be used to test and diagnose electrical circuits, systems, and components
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bga">
+                        <div class="st_icon">
+                            <img src="./src/assets/icons/BGAWorkStation.png" alt="course_icon">
+                            <p>
+                                BGA Workstation
+                            </p>
+                        </div>
+
+                        <div class="course_content">
+                            <div>
+                                <p>
+                                    A BGA (Ball Grid Array) machine is a type of rework station used to repair and refurbish printed circuit boards (PCBs) with ball grid array (BGA) packaging and surface-mounted devices (SMDs). These machines are designed to remove, replace, or rework BGA components, such as microprocessors, memory chips, and other electronic components, on PCBs.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="cro">
+                        <div class="st_icon">
+                            <img src="./src/assets/icons/cro.jpg" alt="course_icon">
+                            <p>
+                                Oscilloscope
+                            </p>
+                        </div>
+
+                        <div class="course_content">
+                            <div>
+                                <p>
+                                    An oscilloscope is an electronic test instrument that graphically displays electrical signals and shows how those signals change over time. It measures these signals by connecting with a sensor.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="dc">
+                        <div class="st_icon">
+                            <img src="./src/assets/icons/DCPowerSupply.png" alt="course_icon">
+                            <p>
+                                DC Power Supply
+                            </p>
+                        </div>
+
+                        <div class="course_content">
+                            <div>
+                                <p>
+                                    A DC Power Supply is a type of power supply that exclusively and constantly supplies DC voltage. Although electrical power is usually transmitted, generated, and disturbed as AC, there are situations where DC Supply is essential. A DC power supply, also known as a bench power supply, is a type of power supply that gives direct current (DC) voltage to power a device.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="soldering">
+                        <div class="st_icon">
+                            <img src="./src/assets/icons/SolderingIron.jpg" alt="course_icon">
+                            <p>
+                                Soldering Iron
+                            </p>
+                        </div>
+
+                        <div class="course_content">
+                            <div>
+                                <p>
+                                    A soldering iron is a handheld tool used to join two metal pieces together by melting a filler metal, called solder, into the joint. It is a crucial tool in various industries, including electronics, electrical engineering, and manufacturing.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="rework">
+                        <div class="st_icon">
+                            <img src="./src/assets/icons/SMDReworkStation.jpg" alt="course_icon">
+                            <p>
+                                SMD Rework Station
+                            </p>
+                        </div>
+
+                        <div class="course_content">
+                            <div>
+                                <p>
+                                    An SMD Rework Station is a specialized tool used in electronics assembly and repair for manual rework processes, particularly for Surface Mount Devices (SMDs). It is designed to provide precise temperature control, airflow, and vacuum generation to facilitate the removal and replacement of SMD components on printed circuit boards (PCBs).
+                                </p>
                             </div>
                         </div>
                     </div>
